--- a/src/global.css
+++ b/src/global.css
@@ -54,7 +54,7 @@ body {
     align-items: center;
 }
 .message{
-    display: none;
+    /* display: none; */
     position: absolute;
     left: 50%;
     top: 50%;
